# codesurface

./: .gitignore  LICENSE  README.md  pyproject.toml  server.json
.github/workflows/: publish.yml
docs/plans/: 2026-03-29-codesurface-filtering-plan.md  2026-03-29-codesurface-filtering-plan.md.tasks.json  2026-03-29-codesurface-filtering.md  2026-03-30-startup-progress.md  2026-03-30-startup-progress.md.tasks.json
src/codesurface/: db.py  filters.py  server.py
src/codesurface/parsers/: __init__.py  base.py  cpp.py  go.py  java.py  python_parser.py  typescript.py
tests/: test_filters.py  test_json_output.py  test_parsers.py  test_server_progress.py
