[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codesurface"
version = "0.7.0"
description = "MCP server that indexes a codebase's public API at startup and serves it via compact tool responses. Pluggable parsers for C#, Go, Java, TypeScript, Python, and more."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [
    {name = "Codeturion", email = "fuatcankoseoglu@gmail.com"},
]
keywords = ["mcp", "csharp", "go", "golang", "typescript", "python", "java", "api", "index", "code-intelligence"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp[cli]>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/Codeturion/codesurface"
Repository = "https://github.com/Codeturion/codesurface"
Issues = "https://github.com/Codeturion/codesurface/issues"

[project.scripts]
codesurface = "codesurface.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/codesurface"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
